dark mode fixes

--- a/scss/partials/admin_sidebar.scss
+++ b/scss/partials/admin_sidebar.scss
@@ -261,6 +261,10 @@
         right: 25px;
         font-size: 36px;
         margin-left: 50px;
+
+        &:hover{
+            color: $color-black;
+        }
     }
 }
 
